--- a/Bericht/main.tex
+++ b/Bericht/main.tex
@@ -62,12 +62,12 @@
 \input{chapters/001-Abkuerzungen.tex}
 \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
 
-\chapter{Hauptteil}
+\chapter{Einleitung}
 \pagenumbering{arabic} 
 \input{chapters/01-Einleitung.tex}
-
+\chapter{Hauptteil}
 \input{chapters/02-Hauptteil.tex}
-
+\chapter{Schluss}
 \input{chapters/03-Schluss.tex}
 
 \newpage
